[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "enex2notion"
version = "0.2.0"
description = "Import Evernote ENEX files to Notion"
authors = ["vzhd1701 <vzhd1701@gmail.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]
license = "MIT"
repository = "https://github.com/vzhd1701/enex2notion"
keywords = ["evernote", "enex", "notion", "import"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Topic :: Internet",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/vzhd1701/enex2notion/blob/master/CHANGELOG.md"

[tool.poetry.scripts]
enex2notion = "enex2notion.cli:main"

[tool.poetry.dependencies]
python = "^3.6.1"
notion = "^0.0.28"
beautifulsoup4 = "^4.10.0"
python-dateutil = "^2.8.2"
progress = "^1.6"
requests = "^2.26.0"
w3lib = "^1.22.0"
tinycss2 = "^1.1.1"
pdfkit = "^1.0.0"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
black = "^20.8b1"
isort = "^5.8.0"
pre-commit = "^2.12.0"
flakehell = "^0.9.0"
wemake-python-styleguide = "^0.15.2"
mdformat = "0.7.7"
pyfakefs = "^4.5.3"

[tool.flakehell]
base = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/flakehell.toml"
extended_default_ignore=[]
max_line_length = 88
exclude = [
    "tests/*.py",
]

[tool.flakehell.plugins]
# Disabled [personal preference]
# WPS111 short names
# WPS305 forbids f-strings
# WPS326 implicit line concat
# Docstings, don't have any
# WPS226 String constant overuse

# Exceptions [false positives & formatting]
# C812 trailing comma <- handled by black
# E203 whitespace before : <- handled by black
# W503 Line break occurred before a binary operator
# WPS317 Indentation for parameters <- handled by black
# WPS323 `%` string formatting, log format

# Bandit
# S303 md5 is used for en-media hash
# S314, S405 ElementTree

pycodestyle = ["+*", "-E203", "-W503"]
flake8-bandit = ["+*", "-S303", "-S314", "-S405"]
flake8-commas = ["+*", "-C812"]
flake8-quotes = ["+*", "-Q000"]
flake8-rst-docstrings = ["-*"]
flake8-docstrings = ["-*"]
flake8-darglint = ["-*"]
wemake-python-styleguide = ["+*", "-WPS111", "-WPS226", "-WPS305", "-WPS317", "-WPS323", "-WPS326"]

[tool.flakehell.exceptions."enex2notion/version.py"]
# I like it this way
wemake-python-styleguide = ["-WPS410"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.coverage]
    [tool.coverage.report]
    show_missing = true
    exclude_lines = [
        # Have to re-enable the standard pragma
        'pragma: no cover',

        # Don't complain about missing debug-only code:
        'def __repr__',
        'if self\.debug',

        # Don't complain if tests don't hit defensive assertion code:
        'raise AssertionError',
        'raise NotImplementedError',

        # Don't complain if non-runnable code isn't run:
        'if 0:',
        'if __name__ == .__main__.:'
    ]
    omit = [
        '*/tests/*'
    ]
